remove java9 features